# movie-search-app

./: .dockerignore  .gitignore  .pre-commit-config.yaml  3RD-PARTY-LICENSES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.MD  Dockerfile  LICENSE  README.md  THIRD_PARTY_LICENSES.md  docker-compose.yml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: issue_template.md
.github/workflows/: cd.yml  ci-cd.yml  ci.yml
backend/: pyproject.toml  requirements.txt
backend/app/: main.py  models.py
backend/services/: search_services.py
backend/tests/: conftest.py
backend/utils/: es_client.py
data/: sample_movies.json
mappings/: movies_mapping.json
scripts/: ingest_sample.py
src/: app.py
